# datadino

./: .gitignore  README.md  pyproject.toml
datadino.egg-info/: SOURCES.txt  top_level.txt
src/datadino.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/datadino/core/: llm_wrapper.py  profiler.py
src/datadino/tests/: profiler.ipynb
src/datadino/tests/data/: crocs.csv
src/datadino/workflows/: qna.py  summarize.py
