[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datadino"
version = "0.1.0"
description = "A lightweight framework for CSV and structured data analysis with LLMs (Groq-powered)."
readme = "README.md"
authors = [
    { name="Your Name", email="your@email.com" }
]
license = "MIT" 
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "matplotlib",
    "requests",
]

[tool.setuptools.packages.find]
where = ["src"]
